# examples

./: .flake8  .gitignore  README.md  cli_with_callback.py  cli_with_initial_context.py  cli_with_mode.py  cli_with_output_context.py  cli_with_path.py  flow.py  pyproject.toml  requirements.txt  simple_class_workflow.py  simple_cli.py  simple_function_workflow.py  simple_function_workflow_with_error.py  step_class_result_context.py  step_class_result_storage.py  step_class_result_task.py  step_function_result_context.py  step_function_result_storage.py  step_function_result_task.py  step_with_groups.py  step_with_initial_context.py  step_with_many_contexts.py  step_with_notify_telegram.py  step_with_previous_context.py  step_with_storage_file.py  step_with_storage_mongodb.py  tox.ini  workflow_background_mode.py  workflow_keep_going_true.py  workflow_parallel_mode.py  workflow_sequential_group_mode.py  workflow_sequential_mode.py  workflow_step_callback.py  workflow_with_async.py  workflow_with_backoff.py  workflow_with_callback_failure.py  workflow_with_callback_success.py  workflow_with_checkpoint.py  (+7 more)
.github/workflows/: python-app-flow.yml  python-app-test.yml  python-etl-flow.yml  python-health-check-flow.yml  python-mini-flow.yml  python-server-flow.yml
docker/: dockerfile.lambda
etl_flow/: .env-example  .gitignore  README.md  book.py  dockerfile.alpine  dockerfile.debian  dockerfile.fedora  dockerfile.lambda  dockerfile.python  dockerfile.ubuntu  handler.py  main.py  pyproject.toml  requirements.txt  template.yaml
etl_flow/etl_flow/: actions.py  workflow.py
etl_flow/tasks/: load.py  transform.py
etl_flow/tests/: test_workflow.py
health_check_flow/: dockerfile.alpine  health_report.md  main.py  pyproject.toml  requirements.txt
health_check_flow/tasks/: aggregate.py  check.py  constants.py  report.py  validate.py
mini_flow/: main.py  pyproject.toml  requirements.txt
mini_flow/tasks/: extract.py  transform.py
server_flow/: .env-example  .gitignore  README.md  handler.py  pyproject.toml  requirements.txt  template.yaml
server_flow/server_flow/: actions.py  server.py  workflow.py
server_flow/tests/: test_workflow.py
tests/: test_integration.py
