[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotflow = "0.15.0.dev3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
