[project]
name = "etl-flow"
version = "0.1.0"
description = "ETL Flow — extract, transform, load pipeline with dotflow"
requires-python = ">=3.12"
dependencies = [
    "dotflow==1.0.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
pydantic = "^2.10.6"
dotflow = {version = "1.0.0", allow-prereleases = true}
pytest = "^8.3.5"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
