[tool.poetry]
name = "etl-flow"
version = "0.1.0"
description = "ETL Flow"
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
pydantic = "^2.10.6"
dotflow = {version = "0.15.0.dev6", allow-prereleases = true}
pytest = "^9.0.3"
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
