[project]
name = "etl-flow"
version = "0.1.0"
description = "ETL Flow — extract, transform, load pipeline with dotflow"
requires-python = ">=3.12"
dependencies = [
    "dotflow==1.0.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
pydantic = "^2.10.6"
dotflow = {version = "1.0.0", allow-prereleases = true}
pytest = "^9.0.3"
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
