[tool.poetry]
name = "health-check-flow"
version = "0.1.0"
description = "Health Check Flow — parallel endpoint monitoring with dotflow"
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dotflow = "0.14.1.dev1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
