[project]
name = "server-flow"
version = "0.1.0"
description = "Server Flow — custom server provider example with dotflow"
requires-python = ">=3.12"
dependencies = [
    "dotflow==1.0.0",
    "requests>=2.32.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.poetry.dependencies]
python = "^3.12"
dotflow = {version = "1.0.0", allow-prereleases = true}
requests = "^2.32.3"
httpx = "^0.28.1"
python-dotenv = "^1.1.0"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
